# advent-of-code-2021

./: .gitignore
python/: pyproject.toml
python/aoc/: day_00(template).py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  input.py
python/tests/: test_day_00(template).py  test_day_01.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/aoc/: day_01.rs  day_02.rs  input.rs  mod.rs
