[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = "Advent of Code 2021 in Python"
authors = ["Shane Caldwell <caldwell.shane@gmail.com>"]
packages = [
    { include = "aoc" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
